@@ -1,6 +1,7 @@
 /* Foundation v2.1.4 http://foundation.zurb.com */
 /* This is for all IE specfific style less than IE9. We hate IE. */
 
-	div.panel { border: 1px solid #ccc; }
-	.lt-ie8 .nav-bar li.has-flyout a { padding-right: 20px; }
-	.lt-ie8 .nav-bar li.has-flyout a:after { border-top: none; }
+div.panel { border: 1px solid #ccc; }
+.lt-ie8 .nav-bar li.has-flyout a { padding-right: 20px; }
+.lt-ie8 .nav-bar li.has-flyout a:after { border-top: none; }
+.ie8 .featured-image {float: none !important;}
